--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
           >
         </div>
         <div class="tanwin">
-          <h2><a href="tanwin.html">Alif-Lam</a></h2>
+          <h2><a href="alif-lam.html">Alif-Lam</a></h2>
           <a href="https://www.youtube.com/watch?v=7zpR-tARXdA" target="_blank"
             >Video Tutorial</a
           >
