--- a/contact.html
+++ b/contact.html
@@ -32,12 +32,7 @@
 
     <!-- || MAIN START -->
     <main>
-      <p>
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Excepturi quod
-        sint eius nulla. Non quia aut possimus, itaque voluptatum omnis,
-        incidunt architecto soluta cumque, nesciunt dolorem velit quas excepturi
-        neque?
-      </p>
+      <p>Please contact Mr. Abdullah</p>
       <hr />
       <p class="kembali-ke-atas">
         <a href="#" class="kembali-ke-atas">Kembali ke atas</a>
