menambah item kembali ke atas

--- a/tanwin.html
+++ b/tanwin.html
@@ -143,6 +143,9 @@
       <!-- <div class="container-footer">
         <footer><p>&copy; Arabic from Zero 2023</p></footer>
       </div> -->
+      <p class="kembali-ke-atas">
+        <a href="#" class="kembali-ke-atas">Kembali ke atas</a>
+      </p>
     </main>
     <footer><p>&copy; Arabic from Zero 2023</p></footer>
     <script src="index.js"></script>
